k8s/manifests/overlays/k3s/apps/ingress-overwrite.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - api
  rules:
    - host: api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: null
    traefik.ingress.kubernetes.io/affinity: null
    traefik.ingress.kubernetes.io/session-cookie-name: null
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - ui
  rules:
    - host: ui
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - adminer
  rules:
    - host: adminer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adminer
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - locust
  rules:
    - host: locust
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: locust-ui
                port:
                  number: 8089
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-fallback-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - errors
  rules:
    - host: errors
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: error-page
                port:
                  number: 80
